test/Distributed/distributed_actor_ban_owned_shared.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend-emit-module -emit-module-path %t/FakeDistributedActorSystems.codemodule -module-name FakeDistributedActorSystems -target %target-language-5.7-abi-triple %S/Inputs/FakeDistributedActorSystems.code
// RUN: %target-language-frontend -typecheck -verify -target %target-language-5.7-abi-triple -I %t 2>&1 %s
// REQUIRES: concurrency
// REQUIRES: distributed

import Distributed
import FakeDistributedActorSystems

typealias DefaultDistributedActorSystem = FakeActorSystem

class Param: Codable {}

distributed actor First {
  distributed fn owned(_: __owned Param) async throws {} // expected-error{{cannot declare '__owned' argument '_' in distributed instance method 'owned'}}
  distributed fn shared(_: __shared Param) async throws {} // expected-error{{cannot declare '__shared' argument '_' in distributed instance method 'shared'}}
  distributed fn consuming(_: consuming Param) async throws {}
  // expected-error @-1 {{cannot declare 'consuming' argument '_' in distributed instance method 'consuming'}}
}

fn test(first: First) async throws {
  try await first.owned(.init())
  try await first.shared(.init())
}
